--- a/agricultural_products_store/app/src/main/AndroidManifest.xml
+++ b/agricultural_products_store/app/src/main/AndroidManifest.xml
@@ -4,18 +4,19 @@
 
     <application
         android:allowBackup="true"
+        android:icon="@drawable/logo2"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Agricultural_products_store">
+        <activity android:name=".RegisterActivity"></activity>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
