--- a/agricultural_products_store/app/build.gradle
+++ b/agricultural_products_store/app/build.gradle
@@ -43,7 +43,17 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
     implementation 'com.google.firebase:firebase-auth:20.0.4'
+    implementation 'com.google.firebase:firebase-storage:19.2.2'
+    implementation 'com.google.firebase:firebase-firestore:22.1.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.1'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+    implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
 }
